--- a/README
+++ b/README
@@ -6,7 +6,15 @@ means adding $HOME/.cabal/bin to your PATH.
 
 1) Download all the dependencies, unpack each one of them and install.
 You will need:
- * keera-hails:     https://github.com/keera-studios/keera-hails
+
+ * The following packages from Keera Studios (https://github.com/keera-studios/):
+   gtk-helpers     >= 0.0.4
+   hails-mvc-environment-gtk
+   hails-mvc-model-protectedmodel
+   hails-mvc-view-gtk
+   hails-reactive-gtk
+   hails-reactivevalues
+
  * keera-callbacks: https://github.com/ivanperez-keera/keera-callbacks
  * gloss-gtk:       https://github.com/ivanperez-keera/gloss-gtk
  * SoOSiM:          https://github.com/ivanperez-keera/SoOSiM
