--- a/README
+++ b/README
@@ -1,8 +1,27 @@
 This is the UI for the SoOSiM simulator.
 
 There are two ways of installing this package. In both cases, you need
-to have your cabal bin directory in your path. In *nix OSs, this usually
-means adding $HOME/.cabal/bin to your PATH.
+to have your cabal bin directory in your path. I recommend using cabal-dev,
+unless you want to install SoOSim for all users or produce a distributable file.
+
+1) Install cabal-dev
+cabal install cabal-dev
+
+(you need to add cabal's bin dir to your path.  In *nix OSs, this usually
+means adding $HOME/.cabal/bin to your PATH.)
+
+2) Take the file instructions.sh from SoOSiM-ui's repository:
+https://github.com/ivanperez-keera/SoOSiM-ui/blob/master/install-with-deps.sh
+
+3) Create a directory where everything will be installed and compiled, and run install-with-deps.sh.
+You'll need glade, ciaro, gtk, opengl development libraries, and possibly others.
+
+The executable should be produced inside cabal-dev/bin/SoOSiM-ui
+
+Let me know if other libs are necessary, or if anything fails (feel free to open an issue).
+
+
+== What follows are old instructions. Follow the instructions above instead.
 
 1) Download all the dependencies, unpack each one of them and install.
 You will need:
