Adds libraries used in Ubuntu. Adds path adjustments.

--- a/README
+++ b/README
@@ -4,17 +4,20 @@ There are two ways of installing this package. In both cases, you need
 to have your cabal bin directory in your path. I recommend using cabal-dev,
 unless you want to install SoOSim for all users or produce a distributable file.
 
+0) You will need ghc, cabal-install, and some libraries. Under ubuntu, the following
+installation covers everything starting from a fresh Ubuntu installation:
+
+    $ apt-get install ghc cabal-install libz-dev git libftgl-dev libglade2-dev alex happy libgtkglext1-dev
+
 1) Install cabal-dev
-cabal install cabal-dev
+
+    $ cabal install cabal-dev
+    $ export PATH=$HOME/.cabal/bin:$PATH
 
 (you need to add cabal's bin dir to your path.  In *nix OSs, this usually
 means adding $HOME/.cabal/bin to your PATH.)
 
-2) Take the file install-with-deps.sh from SoOSiM-ui's repository:
-https://github.com/ivanperez-keera/SoOSiM-ui/blob/master/install-with-deps.sh
-
-3) Create a directory where everything will be installed and compiled, and run install-with-deps.sh.
-You'll need glade, ciaro, gtk, opengl development libraries, and possibly others.
+2) Create a directory where everything will be installed and compiled and run install-with-deps.sh.
 
     $ mkdir soosim-all
     $ cd soosim-all
